adding logo and scroll comtainer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>SriKanakaDurgaGranitesAndNanoWhite</title>
@@ -8,61 +9,63 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1 class="heading"  draggable="true" >Sri Kanaka Durga <br />Granites and Nano White</h1>
-    <a href="./index.html" alt="shop photo, click for the home page">
-    <img id="coverphoto" src="./assests/cover.jpg" alt="Sri Kanaka Durga Granites and Nano White" width="300" height="auto">
-    </a>
-    <hr />
 
-    <div  draggable="true">
+<body>
+    <header class="logo">
+        <a href="./index.html" alt="logo, click for the home page">
+            <img src="./assests/logo.jpg" alt="Sri Kanaka Durga Granites and Nano White">
+        </a>
+    </header>
+    <div class="scroll-container">
+        <img id="coverphoto" src="./assests/cover.jpg" alt="Sri Kanaka Durga Granites and Nano White" width="300"
+            height="auto">
+    </div>
+
+    <!--<div draggable="true">
         <h2>About :</h2>
         <p>
-            Sri Kanaka Durga Granites and Nano White is a leading 
-            supplier of Granite Slabs, Nano White Marble and etc.<br /> 
+            Sri Kanaka Durga Granites and Nano White is a leading
+            supplier of Granite Slabs, Nano White Marble and etc.<br />
             We offer these products at reasonable rates
             and deliver these within the promised time-frame.
         </p>
+    </div>-->
+
+    <div class="products">
+        <h2>Products :</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        <a href="./granites.html"><img class="scover" src="./assests/granites.jpeg" width="100px"
+                                alt="granites image" /></a>
+                    </td>
+                    <td>
+                        <a href="./Nanowhite.html"><img class="scover" src="./assests/nano.jpg" width="100px"
+                                alt="nanowhite image" /></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
-    <div  draggable="true">
-    <h2>Products :</h2>
-    <table>
-        <tr>
-            <th>
-                <a class="sideheading" href="./granites.html">Granites</a>
-            </th>
-            <th>
-                <a class="sideheading" href="./Nanowhite.html">Nano White</a>
-            </th>
-        </tr>
-        <tr>
-            <td>
-                <a href="./granites.html"><img class="scover" src="./assests/granites.jpeg" width="100px" alt="granites image" /></a>
-            </td>
-            <td>
-                <a href="./Nanowhite.html"><img class="scover" src="./assests/nano.jpg" width="100px" alt="nanowhite image" /></a>
-            </td>
-        </tr>
-    </table>
-    </div>  
-
-    <div>
-    <h2>Address :</h2>
-    <p>
-        Gate No. 1, Metro pillar No. 615, Miyapur Rd,<br /> 
-        Mathrusree Nagar, Hafeezpet, Miyapur, <br />
-        Telangana 500049
-    </p>
+    <!--<div>
+        <h2>Address :</h2>
+        <p>
+            Gate No. 1, Metro pillar No. 615, Miyapur Rd,<br />
+            Mathrusree Nagar, Hafeezpet, Miyapur, <br />
+            Telangana 500049
+        </p>
     </div>
 
     <div>
-    <h2>Contact Us : </h2>
-            
-            <a class=contact href="tel:+919494764896">Phone</a> <br />
-            <a class=contact href="https://www.google.co.in/maps/place/Sri+Kanaka+Durga+Granite+%26+Nano+White/@17.4966207,78.3700517,17z/data=!4m6!3m5!1s0x3bcb93bc46f28d3f:0xecc1fed975d3197a!8m2!3d17.4960357!4d78.3696038!16s%2Fg%2F11pgsz46hq?entry=ttu">Location</a><br />
-            <a class=contact href="">srikanakadurgagranitez@gmail.com</a><br />
-    </div>
-    <hr />
+        <h2>Contact Us : </h2>
+
+        <a class=contact href="tel:+919494764896">Phone</a> <br />
+        <a class=contact
+            href="https://www.google.co.in/maps/place/Sri+Kanaka+Durga+Granite+%26+Nano+White/@17.4966207,78.3700517,17z/data=!4m6!3m5!1s0x3bcb93bc46f28d3f:0xecc1fed975d3197a!8m2!3d17.4960357!4d78.3696038!16s%2Fg%2F11pgsz46hq?entry=ttu">Location</a><br />
+        <a class=contact href="">srikanakadurgagranitez@gmail.com</a><br />
+    </div>-->
 </body>
+
 </html>
