--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SriKanakaDurgaGranitesAndNanoWhite</title>
+    <title>Sri Kanaka Durga Granites and Nano White</title>
+    <link rel="icon" href="./assests/durgaa.png" type="image/x-icon">
     <link rel="stylesheet" href="makeup.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,13 +13,12 @@
 
 <body>
     <header class="header">
-        <a href="./index.html" alt="header, click for refresh">
-            <img src="./assests/photo.jpg" alt="logo">
-        </a>
-
+        <div class="logo-div">
+            <a href="./index.html" alt="logo,click for refresh">
+                <img id="logopng" src="./assests/covee.png" alt="logo">
+            </a>
+        </div>
         <nav class="navbar">
-            <p class="navbar-title">Main Menu</p>
-
             <ul class="navbar-list">
                 <li class="navbar-item">
                     <a href="#home" class="navbar-link">Home</a>
@@ -45,6 +45,7 @@
                         </li>
                         <li class="sub-menu-item">
                             <a href="#reviews" class="sub-menu-link">Nano White</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="navbar-item">
@@ -118,10 +119,10 @@
             <section class="products" id="products">
                 <div class="section-content">
                     <div class="section-title">
-                        <h2>Projects</h2>
+                        <h2>Products</h2>
                     </div>
                 </div>
-                <ul class="projects-list">
+                <ul class="products-list">
                     <li>
                         <div class="product-card">
                             <a href="/natural_granites.html">
