--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                     <a href="#home" class="navbar-link">Home</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#about-us" class="navbar-link">About Us</a>
+                    <a href="#about-us" class="navbar-link">About Us
+                        <img class="down-arrow" src="./assests/Untitled design (13).png" alt="down-arrow">
+                    </a>
                     <ul class="sub-menu">
                         <li class="sub-menu-item">
                             <a href="#about-us" class="sub-menu-link">Company</a>
@@ -33,9 +35,12 @@
                             <a href="#reviews" class="sub-menu-link">Customer Reviews</a>
                         </li>
                     </ul>
+
                 </li>
                 <li class="navbar-item">
-                    <a href="#products" class="navbar-link">Products</a>
+                    <a href="#products" class="navbar-link">Products
+                        <img class="down-arrow" src="./assests/Untitled design (13).png" alt="down-arrow">
+                    </a>
                     <ul class="sub-menu">
                         <li class="sub-menu-item">
                             <a href="#about-us" class="sub-menu-link">Natural Granites</a>
