--- a/Nanowhite.html
+++ b/Nanowhite.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Nano White</title>
+    <title>Sri Kanaka Durga Granites and Nano White</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assests/durgaa.png" type="image/x-icon">
+    <link rel="stylesheet" href="makeup.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1 class="heading">Nano White</h1>
+    <header class="header">
+        <div class="logo-div">
+            <a href="./index.html" alt="logo,click for refresh">
+                <img id="logopng" src="./assests/covee.png" alt="logo">
+            </a>
+        </div>
+        <nav class="navbar">
+            <ul class="navbar-list">
+                <li class="navbar-item">
+                    <a href="#home" class="navbar-link">Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#about-us" class="navbar-link">About Us
+                        <img class="down-arrow" src="./assests/downarrow.png" alt="down-arrow">
+                    </a>
+                    <ul class="sub-menu">
+                        <li class="sub-menu-item">
+                            <a href="#about-us" class="sub-menu-link">Company</a>
+                        </li>
+                        <li class="sub-menu-item">
+                            <a href="#reviews" class="sub-menu-link">Customer Reviews</a>
+                        </li>
+                    </ul>
+
+                </li>
+                <li class="navbar-item">
+                    <a href="#products" class="navbar-link">Products
+                        <img class="down-arrow" src="./assests/downarrow.png" alt="down-arrow">
+                    </a>
+                    <ul class="sub-menu">
+                        <li class="sub-menu-item">
+                            <a href="#about-us" class="sub-menu-link">Natural Granites</a>
+                        </li>
+                        <li class="sub-menu-item">
+                            <a href="#reviews" class="sub-menu-link">Artificial Granites</a>
+                        </li>
+                        <li class="sub-menu-item">
+                            <a href="#reviews" class="sub-menu-link">Nano White</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="navbar-item">
+                    <a href="#blogs" class="navbar-link">Blogs</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#contact-us" class="navbar-link">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
