--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <!-- need to edit this below section like adding cover-->
             <section class="section_1" id="home">
-                <div>
+                <div class="cover">
                     <img src="./assests/cover1 .png" alt="cover">
                     <div class="Welcome">
                         <h1>
